welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: value += is not a member of Int
		compteur +=
                         ^countTeen:7: error: value += is not a member of Int
		compteur +=
                         ^countTeen:10: error: value += is not a member of Int
		compteur +=
                         ^countTeen:9: error: type mismatch;
 found   : Unit
 required: Int
	if ((c>=13) && (c<=19)) {
        ^