welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var compteur = 0
	if ((a>=13) && (a<=19)) {
		compteur +=
	}
	if ((b>=13) && (b<=19)) {
		compteur +=
	}
	if ((c>=13) && (c<=19)) {
		compteur +=
	}
}
